--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi>=0.124.4",
+    "orjson>=3.11.5",
     "pydantic>=2.12.5",
     "pymongo>=4.15.5",
+    "python-multipart>=0.0.20",
     "pyyaml>=6.0.3",
     "ruff>=0.14.9",
     "twilio>=9.8.8",
